a1/brendan_gordon/TEST_PROGRAMS/invalidtype/shao_kun_deng/invalid5.min
var x : float;

x = x - x + "";
